# FXAT

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: define.h
include/fx/algorithm/: IFXStrategy.h  LearningStrategy.h  RateStrategy.h
include/fx/client/: EvaluateStrategyClient.h  FXATClient.h
include/fx/data/: FXInfo.h
include/fx/repository/: IFXRepository.h
src/: CMakeLists.txt  main.cpp
src/algorithm/: IFXStrategy.cpp  LearningStrategy.cpp  RateStrategy.cpp
src/client/: EvaluateStrategyClient.cpp  FXATClient.cpp
src/data/: FXInfo.cpp
src/repository/: IFXRepository.cpp
test/: CMakeLists.txt  test_main.cpp
